fix: table nobordered vertical alignment (#405)

--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -54,6 +54,7 @@
 /* nobordered variant */
 .table.nobordered table th, .table.nobordered table td, .table.nobordered table thead tr, .table.nobordered table tbody tr {
   border: none;
+  vertical-align: baseline;
 }
 
 /* industry variant */
